StorageAPI関連のもろもろ追加、あとはネタを少々

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,9 @@
     "icons": {
         "128": "icons/icon128.png"
     },
+    "permissions": [
+        "storage"
+    ],
     "content_scripts": [{
         "matches": [
             "https://teratail.com/*"
@@ -13,5 +16,6 @@
         "js": [
             "contents.js"
         ]
-    }]
+    }],
+    "options_page": "options.html"
 }
